<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="glasses">Glasses</string>
</resources>